Update: Provide meld desktop launcher.
- Because no longer distro-installed, but run from source. See:

  zoidy_home-fries:tasks/app-meld.yml

--- a/defaults/main/panel-objects.yml
+++ b/defaults/main/panel-objects.yml
@@ -159,7 +159,7 @@ zoidy_matecocido_panel_objects:
     position: "547"
 
   - object_id: "zoidy-launcher-meld"
-    launcher_location: "'/usr/share/applications/meld.desktop'"
+    launcher_location: "'meld.desktop'"
     position: "571"
 
   - object_id: "zoidy-launcher-virtualbox"
