Harden: Prefer fully qualified module names (FQMN)
- E.g., Use 'ansible.builtin.shell' vs. just 'shell'

--- a/tasks/all.yml
+++ b/tasks/all.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Configure and Customize mate-panels
-  include_role:
+  ansible.builtin.include_role:
     name: zoidy_panelsweet
     tasks_from: panels-awesome
     apply:
