--- a/defaults/main/panel-objects.yml
+++ b/defaults/main/panel-objects.yml
@@ -232,7 +232,7 @@ zoidy_matecocido_panel_objects:
   - object_id: "zoidy-launcher-gimp"
     # 2020-07-29: flatpak-installed Gimp (v2.10):
     #  launcher_location: "'/usr/share/applications/gimp.desktop'"
-    launcher-location: "'/var/lib/flatpak/exports/share/applications/org.gimp.GIMP.desktop'"
+    launcher_location: "'/var/lib/flatpak/exports/share/applications/org.gimp.GIMP.desktop'"
     # position: "759"
     position: "28"
 
