Improve: Ensure ~/.local/bin/bash exists, for panel launchers
- Because launchers do not load user environment, and to support
  custom Bash builds, they hardcode ~/.local/bin/bash, as opposed
  to /bin/bash.

  - Previously, it was expected user would set up that symlink
    before playing this role, but now launchers will work if you
    run this role without having setup that symlink first.

--- a/tasks/panels-awesome.yml
+++ b/tasks/panels-awesome.yml
@@ -2,6 +2,21 @@
 
 # ***
 
+# Ensure ~/.local/bin/bash exists, which some panel launchers use rather
+# than, e.g., /bin/bash. This is useful if you want to use a custom Bash.
+- name: Stat ~/.local/bin/bash
+  ansible.builtin.stat: path="{{ ansible_env.HOME }}/.local/bin/bash"
+  register: local_bin_bash_f
+
+- name: Symlink ~/.local/bin/bash if not exists
+  ansible.builtin.file:
+    src: "/bin/bash"
+    dest: "{{ ansible_env.HOME }}/.local/bin/bash"
+    state: link
+  when: not local_bin_bash_f.stat.exists
+
+# ***
+
 # CPYST:
 #   dconf dump /org/mate/panel/
 - name: Reset Existing MATE Panel DConf, and Clear ~/.config/mate/panel2.d/default/launchers/
