Update: Change Slack launcher path to use Flatpak launcher
- See Slack install task, install-flatpaks.yml, within:

    https://github.com/landonb/zoidy_mintyfresh

--- a/defaults/main/panel-objects.yml
+++ b/defaults/main/panel-objects.yml
@@ -207,7 +207,9 @@ zoidy_matecocido_panel_objects:
     position: "24"
 
   - object_id: "zoidy-launcher-slack"
-    launcher_location: "'/usr/share/applications/slack.desktop'"
+    # If installed via `dpkg -i <slack>.deb`:
+    #  launcher_location: "'/usr/share/applications/slack.desktop'"
+    launcher_location: "'{{ ansible_env.HOME }}/.local/share/flatpak/app/com.slack.Slack/current/active/files/share/applications/com.slack.Slack.desktop'"
     position: "25"
 
   - object_id: "zoidy-launcher-gnucash"
